# python

./: .gitignore
bank_account/: pyproject.toml
builder_pattern/: README.md  main.py  pyproject.toml
factory_pattern/: main.py  pyproject.toml
simple_card_game/: card.py  deck.py  game.py  procedure_game.py
