[project]
name = "bank-account"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim Ivchenko",email = "sysatrium@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "bank_account", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
